tekton/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webhook-orders-el
  namespace: thegoodcorner-dev
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: orders-el
spec:
  to:
    kind: Service
    name: el-orders-el
    weight: 100
  port:
    targetPort: http-listener
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
